// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coverageDiffer file coverage decreased  should match snapshot 1`] = `
Object {
  "fileA": Object {
    "branches": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
    "isNewFile": false,
    "lines": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
    "statements": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
  },
  "total": Object {
    "branches": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
    "isNewFile": false,
    "lines": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
    "statements": Object {
      "covered": -1,
      "pct": -50,
      "skipped": 0,
      "total": 0,
    },
  },
}
`;

exports[`coverageDiffer file coverage increased  should match snapshot 1`] = `
Object {
  "fileA": Object {
    "branches": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
    "isNewFile": false,
    "lines": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
    "statements": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
  },
  "total": Object {
    "branches": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
    "isNewFile": false,
    "lines": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
    "statements": Object {
      "covered": 1,
      "pct": 50,
      "skipped": 0,
      "total": 0,
    },
  },
}
`;

exports[`coverageDiffer new file  should match snapshot 1`] = `
Object {
  "fileA": Object {
    "branches": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
    "isNewFile": false,
    "lines": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
    "statements": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
  },
  "fileB": Object {
    "branches": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
    "functions": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
    "isNewFile": true,
    "lines": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
    "statements": Object {
      "covered": 2,
      "pct": 100,
      "skipped": 0,
      "total": 2,
    },
  },
  "total": Object {
    "branches": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
    "functions": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
    "isNewFile": false,
    "lines": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
    "statements": Object {
      "covered": 0,
      "pct": 0,
      "skipped": 0,
      "total": 0,
    },
  },
}
`;
